hat/assets/css/_participant.scss
.patient-infos-container {
    width: 100%;
}

.patient-detail {
    width: calc(50% - #{$padding-unit / 2});
}

.duplicate-infos {
    strong {
        display: inline-block;
    }
    li {
        &>span {
            display: inline-block;
            min-width: 100px;
            &.error {
                background-color: transparent;
                height: auto;
                color: $red;
                padding: 0;
            }
        }
    }
}

.cases-list {
    list-style: none;
    li {
        margin-top: $padding-unit * 2;
        position: relative;
        &:after {
            width: calc(100% + #{$padding-unit * 2});
            background-color: $gray;
            height: 1px;
            left: -$padding-unit;
            content: '';
            display: block;
            position: absolute;
            bottom: -$padding-unit;
        }
        &:first-child {
            margin-top: 0;
        }
        &:last-child {
            &:after {
                display: none;
            }
        }
    }
    table {
        margin-bottom: $padding-unit;
    }
    .tests-list>div {
        > :last-child,
        > :nth-last-child(2) {
            table {
                margin-bottom: 0 !important;
            }
        }
    }
    @media (min-width: 1100px) {
        .tests-list>div {
            > :nth-child(odd) {
                width: 50%;
                float: left;
                padding-right: $padding-unit / 2 !important;
            }
            > :nth-child(even) {
                width: 50%;
                float: right;
                padding-left: $padding-unit / 2 !important;
                &+div {
                    clear: both;
                }
            }
        }
    }
}

.not-inline {
    .patient-detail {
        width: 100%;
    }
    .cases-list {
        padding-left: 0;
        list-style: none;
        .tests-list>div {
            > :nth-child(odd),
            > :nth-child(even) {
                width: 100% !important;
                float: none !important;
                padding: 0 !important;
            }
            > :nth-last-child(2) {
                table {
                    margin-bottom: $padding-unit !important;
                }
            }
        }
    }
}

.case-id {
    margin-bottom: $padding-unit / 2;
    span {
        font-weight: bold;
    }
}

